Fix responsiveness on mobile
Fixed mobile responsiveness layout

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -31,6 +32,7 @@ body {
 }
 
 header {
+  box-sizing: border-box;
   padding: 20px;
   display: flex;
   justify-content: space-between;
@@ -332,6 +334,26 @@ div.arrow {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: min-content auto;
+  }
+
+  .mail {
+    flex-direction: column;
+  }
+
+  .cv button {
+    margin: 0 auto;
+  }
+
+  div.info {
+    flex-direction: column;
+  }
+
+  div.mailphonelinkedin {
+    border: none;
+  }
+
+  div.schoolnamedate, .companydate {
+    flex-direction: column;
   }
 
   header {
